# ska-mid-itf-engineering-tools

./: .gitignore  .gitlab-ci.yml  .release  CHANGELOG  CHANGELOG.md  Dockerfile  Makefile  README.md  README2.md  cbf-on.sh  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.gitlab/ci/check-dependencies/: .pipeline.yaml
chrome_extensions/bookmark_updater/: README.md  background.js  manifest.json
docs/src/: HOWTO.md  conf.py  index.rst
examples/: command_read.py
notebooks/: Mid CSP Startup (1).ipynb  Mid CSP Startup.ipynb  Mid_CSP_CBF_Demo_PI20.ipynb  TDT_demo_sg_sa.ipynb  csp_lmc_happypath.ipynb  fsh8_read_noise_power_density_vary_rbw_plot_1.ipynb  fsh8_smb100a_read_and_plot_channel_power_1.ipynb  ms2090a_smb100a_sweep_trace_maxhold.ipynb
resources/: dev_online.json
scripts/: mid_startup.json  mid_startup.py  tango_info.json  tango_info.py  tango_test.py  telescope_start.py  wheel_info.py
scripts/git/: install-prepare-commit-msg-global.sh  install-prepare-commit-msg-local.sh  install-prepare-commit-msg.sh
src/ska_mid_itf_engineering_tools/: __init__.py  talon_on.py  tmc_dish_ids.py
src/ska_mid_itf_engineering_tools/cbf_config/: __init__.py  talon_on.py
src/ska_mid_itf_engineering_tools/dependency_checker/: __init__.py  dependency_checker.py  helm_dependency_checker.py  helm_dependency_collector.py  log_notifier.py  poetry_conflicts.py  poetry_dependency_checker.py  poetry_dependency_collector.py  show_conflicts.py  slack_notifier.py  test_conflicts.py  types.py
src/ska_mid_itf_engineering_tools/git/: __init__.py  prepare_commit_msg.py
src/ska_mid_itf_engineering_tools/k8s_info/: get_k8s_info.py
src/ska_mid_itf_engineering_tools/show_conflicts/: show_conflict.py
src/ska_mid_itf_engineering_tools/ska_jargon/: __init__.py  ska_jargon.py
src/ska_mid_itf_engineering_tools/ska_notebook_helper/: get_tango_notebook.py  mid_itf_control.py
src/ska_mid_itf_engineering_tools/talon/: talon_on.py
src/ska_mid_itf_engineering_tools/tango_control/: get_tango_devices2.py  read_tango_config.py  read_tango_device.py  read_tango_devices.py  tango_control.py  tango_control_skao.py  tango_json.py  tangoctl  tangoctl.json  tangoctl.py  tangoctl2  tangoctl2.json  (+4 more)
(+38 files in other folders)
