[tool.poetry]
name = "ska-mid-itf-engineering-tools"
version = "0.3.2"
description = "SKA MID ITF Engineering tools"
authors = ["Matteo Di Carlo", "ATLAS"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{ include = "src/ska_mid_itf_engineering_tools" }, { include = "tests" } ]

[[tool.poetry.source]]
name = 'skao'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.scripts]
tmc_dish_ids = 'src.ska_mid_itf_engineering_tools.tmc_config.tmc_dish_ids:main'
talon_on = 'src.ska_mid_itf_engineering_tools.cbf_config.talon_on:main'

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ska-ser-skallop = { version = "2.29.8", extras = ["bit"] }
ska-tmc-cdm = "7.3.1"
pytest-json-report = "^1.5.0"
pytest-repeat = "^0.9.1"
kubernetes = "^21.7.0"
asyncua = "^1.0.4"
ska_ser_logging = "^0.4.1"
ska-control-model = "^0.3.1"
pyyaml = "^6.0.1"
nbqa = "^1.7.1"
nbsphinx = "^0.9.3"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
recommonmark = "^0.7.1"
markupsafe = "^2.1.0"
ska-ser-sphinx-theme = "^0.1.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pylint = "^2.15.10"
pylint-junit = "^0.3.2"
pytest-cov = "^4.0.0"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
darglint = "^1.8.1"
mypy = "^0.991"
twine = "^4.0.2"

[tool.poetry.group.ansible.dependencies]
ansible = "^7.5.0"
ansible-lint = { version = "^6.20.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:warnings"
testpaths = ["tests"]
log_cli_level = "INFO"
log_cli = "False"
junit_family = "xunit2"
python_classes = "!Test"
#bdd_features_base_dir = "tests"

[tool.build_sphinx]
source-dir = "docs/src"
build-dir = "docs/_build"
all_files = 1
builder = "html"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 99

[tool.flake8]
max-line-length = 99

[tool.black]
line_length = 99
